Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-14460

QDesktopServices::openUrl() ignores anchor on local files.

XMLWordPrintable

    • d90fb72c201efde8f9fc10c4fb4a542b1a26b9e8 7e89e6bfe8 (qt/qtbase/dev) 7e89e6bfe8 (qt/tqtc-qtbase/dev)

      The fragment is discarded when the scheme is set to "file", when using QDesktopServices::openUrl().
      If you copy this local address with the anchor into the browser, it works, meaning that the anchor (fragment) could be passed to the application, but is not.


      example
      #include <QtGui>
      int main (int argc, char **argv)
      {
          QApplication a(argc, argv);
          QString site("file:///C:/Qt/4.7.0/doc/html/qurl.html");
          QUrl url(site, QUrl::TolerantMode);
          url.setFragment("host");
          qWarning(QString(" URL: %1").arg(url.toString()).toStdString().c_str());
          QDesktopServices::openUrl(url);
          return a.exec();
      }
      

        1. qtbug14460_diag_win.diff
          1 kB
          Friedemann Kleint
        2. qtbug14460_diag_win.diff
          1 kB
          Friedemann Kleint
        3. qtbug14460.zip
          1 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-14460
        # Subject Branch Project Status CR V

            andysh Andy Shaw
            mawiesma Martin Wiesmann (closed Nokia identity) (Inactive)
            Votes:
            10 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: